# Openlnk

./: .env.example  .gitignore  BLOCKED.md  CLAUDE.md  DB-SCHEMA.sql  DESIGN.md  EVAL-HARNESS.md  MILESTONES.md  PRD.md  README.md  REQUIREMENTS.md  TODOS.md  docker-compose.yml  justfile  openapi.yaml  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema_with_rls.py
apps/api/app/: config.py  db.py  main.py  models.py  schemas.py
apps/api/app/connectors/: __init__.py
apps/api/app/routers/: auth.py  brief.py  businesses.py  commitments.py  consent.py  contexts.py  extraction.py  learning.py  sync.py  threads.py
apps/api/app/services/: auth_service.py  autonomy_service.py  backup_service.py  billing_service.py  calendar_service.py  commitment_service.py  consent_service.py  console_service.py  context_service.py  data_portability_service.py  fee_cycle_service.py  invite_service.py  learning_service.py  llm.py  notification_service.py  performance_service.py  policy_engine.py  rate_limit_service.py  roster_service.py  security_service.py  sync.py  upi_service.py  web_thread_service.py
apps/api/app/workers/: extraction_job.py  idempotency_purge.py
apps/api/prompts/: daily_brief_v1.txt  extract_commitments_v1.txt
apps/api/tests/: conftest.py  test_amendment.py  test_api_health.py  test_audit_idempotency.py  test_autonomy.py  test_bounded_auto.py  test_business_console.py  test_business_onboarding.py  test_calendar_fusion.py  test_commitment_core.py  test_commitment_participants.py  test_consent_privacy.py  test_context.py  test_context_service.py  test_daily_brief.py  test_data_export_deletion.py  test_demotion_killswitch.py  test_eval_loop.py  test_extraction.py  test_extraction_config.py  test_extraction_pipeline.py  test_graduation.py  test_health_consent.py  test_idempotency_purge.py  test_invite_link.py  test_learning_loop.py  test_learning_profile.py  test_llm_adapter.py  test_nonfunctional.py  test_notifications.py  test_pitr_config.py  test_policy_engine.py  test_rls_isolation.py  test_sync_integration.py  test_sync_protocol.py  test_upi_intent.py  test_web_thread.py  test_worker.py
(+54 files in other folders)
